# 3d-geometry-particles

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/assets/shaders/: fill.fragment.glsl  vertex.glsl
app/assets/shaders/dx/: color.hlsl  common.hlsl  light-cascade-shadow.hlsl  light-lib.hlsl  light-no-shadow.hlsl  light.hlsl  screen-texture.hlsl  skybox.hlsl  texture.hlsl
app/assets/shaders/dx/libs/: common.hlsl  shadows.hlsl
app/src/: AppLayer.cpp  AppLayer.hpp  CascadeShadow.hpp  Geometry.cpp  Geometry.hpp  GeometryParticle.cpp  GeometryParticle.hpp  ModelFactory.hpp  TBN.hpp  main.cpp
app/src/gfx/: GfxEffect.hpp
app/src/gfx/CascadeShadows/: CascadeShadow.hpp  CascadeShadowEffect.cpp  CascadeShadowEffect.hpp
app/src/gfx/FrustrumCulling/: Frustrum.hpp  FrustrumCullingEffect.cpp  Grid.hpp
app/src/gfx/GeometryParticles/: Geometry.hpp  GeometryParticle.cpp  GeometryParticle.hpp  GeometryParticleEffect.cpp  GeometryParticleEffect.hpp
app/src/gfx/Skybox/: SkyboxEffect.cpp  SkyboxEffect.hpp
app/src/gfx/SkyboxNoise/: SkyboxNoiseEffect.cpp
engine/: CMakeLists.txt
engine/src/Core/: Math.hpp
engine/src/Engine/: Application.cpp  Application.hpp  Engine.hpp  Layer.cpp  Layer.hpp
engine/src/IO/: Input.cpp  Window.cpp  Window.hpp
engine/src/IO/SDL/: SDLInput.hpp
engine/src/IO/Win/: DxUtils.hpp  FrameResource.cpp  FrameResource.hpp  RenderItem.hpp  UploadBuffer.hpp  WinInput.cpp  WinInput.hpp  WinWindow.cpp  WinWindow.hpp
engine/src/IO/WinOld/: DxUtils.cpp  DxUtils.hpp  FrameResource.cpp  FrameResource.hpp  MeshGeometry.hpp  WinInput.cpp  WinWindow.cpp  WinWindow.hpp
engine/src/Render/Abstraction/: Camera.cpp  Camera.hpp  CrossPlatformRender.cpp  CrossPlatformRender.hpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  Renderer.hpp  ShaderProgramSlot.hpp
engine/src/Render/Adapters/Dx/: AdapterDx.hpp
engine/src/Render/Adapters/OpenGL/: AdapterOpenGL.hpp
engine/src/Render/Dx12Render/: CBPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DxDescriptorPool.cpp  DxDescriptorPool.hpp  DxGeometryRegistry.cpp  DxGeometryRegistry.hpp  DxMeshGeometry.hpp  DxRender.cpp  DxRender.hpp  DxTextureLoader.cpp  DxTextureLoader.hpp  DxUtils.cpp  DxUtils.hpp  GeometryRegistry.hpp  MeshGeometry.hpp  TextureLoader.cpp  TextureLoader.hpp  UploadBuffer.hpp
engine/src/Render/Dx12Render/Frame/: DxFrameResource.hpp  DxRenderResource.hpp  FrameResource.hpp  RenderResource.hpp
engine/src/Render/Dx12Render/Infrastructure/: DepthStencilTexture.cpp  DepthStencilTexture.hpp  DxCubeMapTexture.hpp  DxDepthStencilTexture.cpp  DxDepthStencilTexture.hpp  DxFramebuffer.cpp  DxFramebuffer.hpp  DxRenderPass.cpp  DxRenderPass.hpp  DxRenderTexture.cpp  DxRenderTexture.hpp  DxResource.hpp  DxShaderProgram.cpp  DxShaderProgram.hpp  DxShaderProgramDataBuffer.cpp  DxShaderProgramDataBuffer.hpp  DxShaderProgramSlot.cpp  DxShaderProgramSlot.hpp  DxTexture.hpp  Framebuffer.cpp  Framebuffer.hpp  RenderPass.cpp  RenderPass.hpp  RenderTexture.cpp  RenderTexture.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.hpp
engine/src/Render/OpenGLRender/: OpenGLGeometryRegistry.cpp  OpenGLGeometryRegistry.hpp  OpenGLMeshGeometry.hpp  OpenGLRender.cpp  OpenGLRender.hpp  OpenGLUtils.cpp  OpenGLUtils.hpp
engine/src/Render/OpenGLRender/Infrastructure/: OpenGLDepthStencilTexture.cpp  OpenGLDepthStencilTexture.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRenderPass.cpp  OpenGLRenderPass.hpp  OpenGLRenderTexture.cpp  OpenGLRenderTexture.hpp  OpenGLShaderProgram.cpp  OpenGLShaderProgram.hpp  OpenGLShaderProgramSlot.cpp  OpenGLShaderProgramSlot.hpp
engine/src/Render3D/: ModelFactory.cpp  ModelLoader.cpp  TextureLoader.cpp
engine/src/Render3D/GfxObjects/: Shader.cpp
engine/src/Render3D/Models/: Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Vertex.hpp
engine/src/Render3D/Renderers/: MasterRenderer.cpp  MasterRenderer.hpp
engine/src/Render3D/Utils/: TBN.hpp
engine/src/Render3D_DEPRECATED/: ModelFactory.hpp  ModelLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
engine/src/Render3D_DEPRECATED/GfxObjects/: Shader.hpp
engine/src/Render3D_DEPRECATED/Models/: Model.hpp
